; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_TcpIp.c_IsDhcpPacketForSpecificMac.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_TcpIp.c_IsDhcpPacketForSpecificMac.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }
%struct.TYPE_3__ = type { i32, i32 }

@MAC_PROTO_IPV4 = common dso_local global i64 0, align 8
@IP_PROTO_UDP = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [62 x i8] c"IsDhcpPacketForSpecificMac: DHCP Request Packet is Detected.\0A\00", align 1
@.str.1 = private unnamed_addr constant [63 x i8] c"IsDhcpPacketForSpecificMac: DHCP Response Packet is Detected.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IsDhcpPacketForSpecificMac(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_4__*, align 8
  %10 = alloca %struct.TYPE_3__*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32 0, i32* %12, align 4
  store i32 0, i32* %13, align 4
  %14 = load i32*, i32** %5, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %23, label %16

16:                                               ; preds = %3
  %17 = load i32*, i32** %7, align 8
  %18 = icmp eq i32* %17, null
  br i1 %18, label %23, label %19

19:                                               ; preds = %16
  %20 = load i32*, i32** %7, align 8
  %21 = call i64 @IsZero(i32* %20, i32 6)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %19, %16, %3
  store i32 0, i32* %4, align 4
  br label %135

24:                                               ; preds = %19
  %25 = load i32, i32* %6, align 4
  %26 = icmp slt i32 %25, 14
  br i1 %26, label %27, label %28

27:                                               ; preds = %24
  store i32 0, i32* %4, align 4
  br label %135

28:                                               ; preds = %24
  %29 = load i32*, i32** %5, align 8
  %30 = load i32*, i32** %7, align 8
  %31 = call i64 @Cmp(i32* %29, i32* %30, i32 6)
  %32 = icmp eq i64 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %28
  store i32 1, i32* %13, align 4
  br label %34

34:                                               ; preds = %33, %28
  %35 = load i32, i32* %6, align 4
  %36 = sub nsw i32 %35, 6
  store i32 %36, i32* %6, align 4
  %37 = load i32*, i32** %5, align 8
  %38 = getelementptr inbounds i32, i32* %37, i64 6
  store i32* %38, i32** %5, align 8
  %39 = load i32*, i32** %5, align 8
  %40 = load i32*, i32** %7, align 8
  %41 = call i64 @Cmp(i32* %39, i32* %40, i32 6)
  %42 = icmp eq i64 %41, 0
  br i1 %42, label %43, label %44

43:                                               ; preds = %34
  store i32 1, i32* %12, align 4
  br label %44

44:                                               ; preds = %43, %34
  %45 = load i32, i32* %6, align 4
  %46 = sub nsw i32 %45, 6
  store i32 %46, i32* %6, align 4
  %47 = load i32*, i32** %5, align 8
  %48 = getelementptr inbounds i32, i32* %47, i64 6
  store i32* %48, i32** %5, align 8
  %49 = load i32, i32* %12, align 4
  %50 = icmp eq i32 %49, 0
  br i1 %50, label %51, label %55

51:                                               ; preds = %44
  %52 = load i32, i32* %13, align 4
  %53 = icmp eq i32 %52, 0
  br i1 %53, label %54, label %55

54:                                               ; preds = %51
  store i32 0, i32* %4, align 4
  br label %135

55:                                               ; preds = %51, %44
  %56 = load i32, i32* %12, align 4
  %57 = icmp ne i32 %56, 0
  br i1 %57, label %58, label %62

58:                                               ; preds = %55
  %59 = load i32, i32* %13, align 4
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %61, label %62

61:                                               ; preds = %58
  store i32 0, i32* %4, align 4
  br label %135

62:                                               ; preds = %58, %55
  %63 = load i32*, i32** %5, align 8
  store i32* %63, i32** %8, align 8
  %64 = load i32, i32* %6, align 4
  %65 = sub nsw i32 %64, 2
  store i32 %65, i32* %6, align 4
  %66 = load i32*, i32** %5, align 8
  %67 = getelementptr inbounds i32, i32* %66, i64 2
  store i32* %67, i32** %5, align 8
  %68 = load i32*, i32** %8, align 8
  %69 = call i64 @READ_USHORT(i32* %68)
  %70 = load i64, i64* @MAC_PROTO_IPV4, align 8
  %71 = icmp ne i64 %69, %70
  br i1 %71, label %72, label %73

72:                                               ; preds = %62
  store i32 0, i32* %4, align 4
  br label %135

73:                                               ; preds = %62
  %74 = load i32*, i32** %5, align 8
  %75 = load i32, i32* %6, align 4
  %76 = call i32 @GetIpHeaderSize(i32* %74, i32 %75)
  store i32 %76, i32* %11, align 4
  %77 = load i32, i32* %11, align 4
  %78 = icmp eq i32 %77, 0
  br i1 %78, label %79, label %80

79:                                               ; preds = %73
  store i32 0, i32* %4, align 4
  br label %135

80:                                               ; preds = %73
  %81 = load i32*, i32** %5, align 8
  %82 = bitcast i32* %81 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %82, %struct.TYPE_4__** %9, align 8
  %83 = load i32, i32* %11, align 4
  %84 = load i32*, i32** %5, align 8
  %85 = sext i32 %83 to i64
  %86 = getelementptr inbounds i32, i32* %84, i64 %85
  store i32* %86, i32** %5, align 8
  %87 = load i32, i32* %11, align 4
  %88 = load i32, i32* %6, align 4
  %89 = sub nsw i32 %88, %87
  store i32 %89, i32* %6, align 4
  %90 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %91 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %90, i32 0, i32 0
  %92 = load i64, i64* %91, align 8
  %93 = load i64, i64* @IP_PROTO_UDP, align 8
  %94 = icmp ne i64 %92, %93
  br i1 %94, label %95, label %96

95:                                               ; preds = %80
  store i32 0, i32* %4, align 4
  br label %135

96:                                               ; preds = %80
  %97 = load i32, i32* %6, align 4
  %98 = sext i32 %97 to i64
  %99 = icmp ult i64 %98, 8
  br i1 %99, label %100, label %101

100:                                              ; preds = %96
  store i32 0, i32* %4, align 4
  br label %135

101:                                              ; preds = %96
  %102 = load i32*, i32** %5, align 8
  %103 = bitcast i32* %102 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %103, %struct.TYPE_3__** %10, align 8
  %104 = load i32*, i32** %5, align 8
  %105 = getelementptr inbounds i32, i32* %104, i64 8
  store i32* %105, i32** %5, align 8
  %106 = load i32, i32* %6, align 4
  %107 = sext i32 %106 to i64
  %108 = sub i64 %107, 8
  %109 = trunc i64 %108 to i32
  store i32 %109, i32* %6, align 4
  %110 = load i32, i32* %12, align 4
  %111 = icmp ne i32 %110, 0
  br i1 %111, label %112, label %121

112:                                              ; preds = %101
  %113 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %114 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %113, i32 0, i32 1
  %115 = load i32, i32* %114, align 4
  %116 = call i32 @Endian16(i32 %115)
  %117 = icmp eq i32 %116, 67
  br i1 %117, label %118, label %120

118:                                              ; preds = %112
  %119 = call i32 @Debug(i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str, i64 0, i64 0))
  store i32 1, i32* %4, align 4
  br label %135

120:                                              ; preds = %112
  br label %134

121:                                              ; preds = %101
  %122 = load i32, i32* %13, align 4
  %123 = icmp ne i32 %122, 0
  br i1 %123, label %124, label %133

124:                                              ; preds = %121
  %125 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %126 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %125, i32 0, i32 0
  %127 = load i32, i32* %126, align 4
  %128 = call i32 @Endian16(i32 %127)
  %129 = icmp eq i32 %128, 67
  br i1 %129, label %130, label %132

130:                                              ; preds = %124
  %131 = call i32 @Debug(i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str.1, i64 0, i64 0))
  store i32 1, i32* %4, align 4
  br label %135

132:                                              ; preds = %124
  br label %133

133:                                              ; preds = %132, %121
  br label %134

134:                                              ; preds = %133, %120
  store i32 0, i32* %4, align 4
  br label %135

135:                                              ; preds = %134, %130, %118, %100, %95, %79, %72, %61, %54, %27, %23
  %136 = load i32, i32* %4, align 4
  ret i32 %136
}

declare dso_local i64 @IsZero(i32*, i32) #1

declare dso_local i64 @Cmp(i32*, i32*, i32) #1

declare dso_local i64 @READ_USHORT(i32*) #1

declare dso_local i32 @GetIpHeaderSize(i32*, i32) #1

declare dso_local i32 @Endian16(i32) #1

declare dso_local i32 @Debug(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
